<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SimMovidriveMode" Id="{5d681fdd-1fc5-0b7f-127e-4ac1d74e7f8d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SimMovidriveMode :
(
	Idle 	:= 0,
	Jog	 	:= 1,
	Ref		:= 2,
	Auto	:= 3
)BYTE;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>