<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SimMovidriveConfig" Id="{f37e5920-2a9c-0c84-2cdf-bcc1c80a1fc3}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '0'}
TYPE ST_SimMovidriveConfig :
STRUCT
	nSoftwareLimitMin	: DINT := -2147483648;	//Position limit minimum in LU
	nSoftwareLimitMax	: DINT := 2147483647;	//Position limit maximum in LU
	fDecCoastStop		: REAL := 10000.0;		//Deceleration for coast/brake stop in LU/s^2
	fDecRapidStop		: REAL := 10000.0;		//Deceleration for emergency stop in LU/s^2
	fDecRampStop		: REAL := 1000.0;		//Decceleration limit (bus stop) in LU/s^2
	fRatioVelocity		: REAL := 1.0;			//Ratio for setpoint velocity
	fRatioAccDec		: REAL := 1.0;			//Ratio for setpoint acceleration/deceleration
	fRatioPosition		: REAL := 0.001;		//Ratio for position output
	nJerk				: INT := 0;				//Jerk from 0 to 100%
	bSwapProcessData	: BOOL;					//SWAP Process Data from/to FIELDBUS
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>