<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SimMovidriveStatusData" Id="{291a507f-b70c-0302-2c97-c204a3e9d9f0}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_SimMovidriveStatusData :
STRUCT
	bMotorTurning			: BIT;	//0			1 = Motor is turning
	bInverterReady			: BIT;	//1			1 = Inverter is ready
	bReferenced				: BIT;	//2			1 = Drive is referenced
	bTargetPositionReached	: BIT;	//3			1 = Target position reached
	bBrakeReleased			: BIT;	//4			1 = Brake is released
	bError					: BIT;	//5			1 = Error
	bLimitSwitchCW		  	: BIT;	//6			1 = Limit switch clock wise reached 
	bLimitSwitchCCW			: BIT;	//7			1 = Limit switch counter clock wise reached 	                            
	nStatus					: BYTE;	//8..15		Status / Errorcode
	nActPosition			: DINT; //16..47	Actual position
	nActVelocity			: UINT; //48..63	Actual velocity
	nActCurrent				: UINT; //64..79	Acutal current
	nActUnit				: UINT; //80..95	Actual unit utilization
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>